# CosmicCodes

./: .gitignore  AngularPowerSpectrumTH.cpp  BiasFunctions.cpp  CMakeLists.txt  CorrelationFunction.cpp  CosmoLib.cpp  CosmologicalFunctions.cpp  DensityProfiles.cpp  FileOutput.cpp  Galaxy.cpp  GnuplotC.cpp  Hod.cpp  Makefile  NumericalMethods.cpp  ParametersF.cpp  PowerSpectrumTH.cpp  README.md  Readme  ScreenOutput.cpp  Statistics.cpp  cosmicatlas_new_unitsim_p128.ini  mass_function  par  parameters_cosmolib.ini  plot_single_slice.py  submitt_unitsim.sh
Python/: cosmolib_plots.py
codes/: Cl.cpp  MainCl.cpp  RanPLC.cpp  analysis_halo_catalogs.cpp  bmt.cpp  cosmic_web.cpp  cosmicatlass.cpp  cosmolib.cpp  downsample.cpp  extra_tasks.cpp  galtools.cpp  hgaps.cpp  paramsr.cpp  power_spectrum.cpp  read_slics_ic.cpp  readme  secbias.cpp
examples/: bmt.cpp  cosmic_web.cpp  cosmicatlass.cpp  cosmolib.cpp  distance_priors.cpp  galtools.cpp  halo_analysis.cpp  hgaps.cpp  paramsr.cpp  power_spectrum.cpp  subtract_cv.cpp  test.cpp
headers/: AngularPowerSpectrum.h  AngularPowerSpectrumF.h  AngularPowerSpectrumTH.h  Astrophysics.h  BiasFunctions.h  BiasMappingTechnique.h  COSMOlib.h  Catalog.h  ClFunctions.h  Constants.h  CoordinateSystem.h  CorrelationFunction.h  CosmiCalcLIB.h  CosmoLib.h  CosmologicalFunctions.cpp  CosmologicalFunctions.h  Cwclass.h  DensityProfiles.h  DnDz.h  Doxyfile  FftwFunctions.h  FftwWrapper.h  FileOutput.h  Galaxy.h  GnuplotC.h  HOD.h.gch  Hod.h  LPT.h  McmcFunctions.h  Miscelanious.h  NumericalMethods.h  Parameters.h  ParametersF.h  Parameters_CosmoLib.h  Params.h  PowerSpectrumF.h  PowerSpectrumTH.h  ScalingRelations.h  ScreenOutput.h  Statistics.h  (+10 more)
html/: AngularPowerSpectrumF_8h.html  AngularPowerSpectrumF_8h.js  AngularPowerSpectrumF_8h__incl.dot  AngularPowerSpectrumF_8h_source.html  AngularPowerSpectrumTH_8h.html  AngularPowerSpectrumTH_8h.js  AngularPowerSpectrumTH_8h__incl.dot  AngularPowerSpectrumTH_8h_source.html  AngularPowerSpectrum_8h.html  AngularPowerSpectrum_8h.js  AngularPowerSpectrum_8h__dep__incl.dot  AngularPowerSpectrum_8h__incl.dot  AngularPowerSpectrum_8h_source.html  AngularPowerSpectrum_8h_structcl__params.js  Astrophysics_8h.html  Astrophysics_8h.js  Astrophysics_8h__dep__incl.dot  Astrophysics_8h__incl.dot  Astrophysics_8h_source.html  Astrophysics_8h_structs__astrophysical__parameters.js  Bam_8h.html  Bam_8h.js  Bam_8h__incl.dot  Bam_8h_source.html  BiasFunctions_8h.html  BiasFunctions_8h.js  BiasFunctions_8h__dep__incl.dot  BiasFunctions_8h__incl.dot  BiasFunctions_8h_source.html  BiasMappingTechnique_8h.html  BiasMappingTechnique_8h.js  BiasMappingTechnique_8h__dep__incl.dot  BiasMappingTechnique_8h__incl.dot  BiasMappingTechnique_8h_source.html  BiasMappingTechnique_8h_structprop__collection.js  COSMOlib_8h.html  COSMOlib_8h__incl.dot  COSMOlib_8h_source.html  Catalog_8h.html  Catalog_8h.js  (+1060 more)
include/: AngularPowerSpectrum.hpp  AngularPowerSpectrumF.hpp  AngularPowerSpectrumTH.hpp  Astrophysics.hpp  BiasFunctions.hpp  BiasMappingTechnique.hpp  COSMOlib.hpp  Catalogue.hpp  CoordinateSystem.hpp  CorrelationFunction.hpp  CosmiCalcLIB.hpp  CosmoLib.hpp  CosmologicalFunctions.hpp  Cwclass.hpp  DensityProfiles.hpp  DnDz.hpp  Doxyfile  FftwFunctions.hpp  FftwWrapper.hpp  FileOutput.hpp  Galaxy.hpp  GnuplotC.hpp  HaloTools.hpp  Hod.hpp  LPT.hpp  McmcFunctions.hpp  Miscelanious.hpp  NumericalMethods.hpp  ParametersMCMC.hpp  Params.hpp  PowerSpectrumF.hpp  PowerSpectrumTH.hpp  ScalingRelations.hpp  ScreenOutput.hpp  Statistics.hpp  Structures.hpp  cosmo_parameters.hpp  def.hpp  def_bmt.hpp  fftw_array.hpp  (+1 more)
lib/: Makefile  readme
main/: #Makefile#  2mpz.json  Makefile  cosmolib_par.json  default.json  default_all_on.json  generate_param_files_unitsim.sh  generate_param_files_unitsim_inv.sh  generate_param_files_unitsim_realizations.sh  generate_param_files_unitsim_sub.sh  generate_param_files_voids_80.sh  parameters_cosmolib.ini  plot_file.json  plot_file_angular_power_spectrum_measurement.json  plot_file_bias_field.json  plot_file_bias_field.json.save  plot_file_cosmoinfo.json  plot_file_grf.json  plot_file_individual_bias.json  plot_file_interpolated_field.json  plot_file_power_spectrum_grf.json  plot_file_power_spectrum_measurement.json  readme  sdss.json  submitt_unitsim.sh  test_mass  test_mass_cumulative  test_vmax  test_vmax_cumulative  unitsim.json
python/: cosmolib_plots.py
source/:  *Minibuf-1*  #indbias.cpp#  AngularPowerSpectrum.cpp  AngularPowerSpectrumF.cpp  Astrophysics.cpp  BiasFunctions.cpp  BiasMappingTechnique.cpp  Catalog.cpp  Catalogue.cpp  ClFunctions.cpp  ClFunctions.h  CoordinateSystem.cpp  CorrelationFunction.cpp  CosmoLib.cpp  CosmologicalFunctions.cpp  Cwclass.cpp  (+23 more)
(+1192 files in other folders)
